--- a/Demo2-MusicStoreApp/src/MusicStore/Views/Shared/_Layout.cshtml
+++ b/Demo2-MusicStoreApp/src/MusicStore/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         @RenderBody()
         <hr />
         <footer class="navbar navbar-fixed-bottom navbar-default text-center">
-            <p><a href="https://www.github.com/aspnet/MusicStore">www.github.com/aspnet/MusicStore</a></p>
+            <p><a href="https://github.com/AshleyPoole/DockerForWindows101">https://github.com/AshleyPoole/DockerForWindows101</a></p>
             <small>@Html.ActionLink("admin", "Index", "StoreManager", new { area = "Admin" })</small>
         </footer>
     </div>
